<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quizFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/link1"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/quiz_1"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/link2"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginTop="200dp"
        android:gravity="center_horizontal"
        android:text="@string/quiz_2"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/link3"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:layout_marginTop="300dp"
        android:gravity="center_horizontal"
        android:text="@string/quiz_3"
        android:textSize="36sp" />

</FrameLayout>